# metafashion

./: .fleek.json  .gitignore  Cargo.toml  README.md  index.html  ipfs-404.html  node-globals.js  package-lock.json  package.json  snowpack.config.js
assets/: app.js  glitch.css  style.css  vip.js
assets/css/: style.css
src/: components.rs  main.rs
src/components/: app.rs  loading.rs  mod.rs  site.rs
src/components/site/: faq.rs  footer.rs  hero.rs  mod.rs  nav.rs  rewards.rs  roadmap.rs  team.rs  vip.rs  wallet.rs
